charts/mgmt/portainer/templates/virtual-service.yaml

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: portainer
spec:
  hosts:
  - '*'
  gateways:
  - istio-ingress/gateway # can omit the namespace if gateway is in same namespace as virtual service.
  http:
  - route:
    - destination:
        host: portainer.mgmt.svc.cluster.local
        port:
          number: 9000
